--- a/assets/main.css
+++ b/assets/main.css
@@ -25,10 +25,18 @@
 		--red: #ef4444;
 	}
 
-	@media screen {
-		.dark {
+	@media screen and (prefers-color-scheme: dark) {
+		:root {
 			--background: #000;
 			--foreground: #fff;
+			--accent-1: #111;
+			--accent-2: #333;
+			--accent-3: #444;
+			--accent-4: #666;
+			--accent-5: #888;
+			--accent-6: #999;
+			--accent-7: #eaeaea;
+			--accent-8: #fafafa;
 		}
 	}
 
